# nrcc-core

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Future.md  README.md  Reference.md  ZH-CHANGELOG.md  ZH-CONTRIBUTING.md  ZH-README.md  build.rs  languages.yaml  supported_languages.md
.github/workflows/: mean_bean_ci.yml
src/: error.rs  lib.rs
src/language/: language_file.rs  language_syntax.rs  language_type.rs  mod.rs
src/parser/: mod.rs  result.rs  state.rs  utils.rs
src/parser/parse/: comment.rs  mod.rs  string.rs  sublang.rs
templates/: language_file.tera.rs  language_syntax.tera.rs  language_type.tera.rs  tests.tera.rs
tests/: test_all.rs  test_config.yaml
tests/source/: rust.rs
