[package]
name = "nrcc_core"
version = "0.1.0"
edition = "2021"
include = [
    "src/**/*",
    "Cargo.toml",
    "languages.yaml",
    "build.rs",
    ".gitignore",
    "templates/**/*",
]
readme = "README.md"
authors = ["Embers-of-the-Fire<stellarishs@163.com>"]
description = "A code counter."
repository = "https://github.com/Embers-of-the-Fire/nrcc-core"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
either = "1.8.1"
regex = "1.8.4"
itertools = "0.11.0"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
serde_yaml = "0.9.21"
serde_json = "1"

[build-dependencies]
anyhow = "1"
tera = "1.19.0"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.21"
serde_json = "1"
